// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build action > build 0 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 1 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 2 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=32
# Built by cspell-tools.
# Data:
__DATA__
L
o
ndon$4s Angeles$9<2
M
e
xico City$9<2
N
e
w Amsterdam$9Delhi$5York$8
P
a
ri#d;<4
S
a
n Francisco$9<4
"
`;

exports[`build action > build 3 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 4 1`] = `
"
# cspell-tools: keep-case no-split

Amsterdam
Angeles
City
Delhi
Francisco
London
Los
Mexico
New
Paris
San
York
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 5 1`] = `
"
# cspell-tools: keep-case no-split

apple
banana
grape
mango
orange
pear
strawberry
"
`;

exports[`build action > build 6 1`] = `
"
# cspell-tools: keep-case no-split

apple
banana
black
blue
cyan
grape
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build multi 0 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build multi 0 2`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
*msg
+code*
+error*
Café
Code*
Error*
"
`;

exports[`build action > build multi 0 3`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`build action > build multi 0 4`] = `
"00000000  54 72 69 65  42 6c 6f 62  01 02 03 04  30 30 2e 30   TrieBlob....00.0
00000010  31 2e 30 30  84 00 00 00  58 00 00 00  00 00 00 00   1.00....X.......
00000020  00 00 00 00  21 21 7e 7e  2b 2b 3a 3a  00 00 00 00   ....!!~~++::....
00000030  00 00 00 00  00 00 00 00  00 00 00 00  dc 00 00 00   ................
00000040  bd 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000050  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000060  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000070  00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00   ................
00000080  00 00 00 00  05 00 00 00  4c 09 00 00  4d 0c 00 00   ........L...M...
00000090  4e 10 00 00  50 14 00 00  53 15 00 00  00 01 00 00   N...P...S.......
000000a0  00 07 00 00  00 17 00 00  02 18 00 00  6e 07 00 00   ............n...
000000b0  73 08 00 00  00 2d 00 00  00 3d 00 00  00 45 00 00   s....-...=...E..
000000c0  00 4b 00 00  03 50 00 00  41 0d 00 00  44 0e 00 00   .K...P..A...D...
000000d0  59 0f 00 00  00 57 00 00  00 6d 00 00  10 04 53 54   Y....W...m....ST
000000e0  00 00 00 00  18 00 00 00  6e 00 00 00  86 00 00 00   ........n.......
000000f0  37 00 00 00  00 00 11 00  f2 02 e3 02  91 00 c2 01   7...............
00000100  b3 01 a4 01  95 01 86 01  77 01 68 01  b1 00 51 01   ........w.h...Q.
00000110  42 01 33 01  24 01 15 01  06 01 f7 00  e8 00 d9 00   B.3.$...........
00000120  ca 00 e1 01  42 02 33 02  24 02 15 02  06 02 f7 01   ....B.3.$.......
00000130  e8 01 81 00  82 02 73 02  64 02 31 03  22 03 13 03   ......s.d.1."...
00000140  21 00 52 03  43 03 82 00  b3 02 a4 02  a2 00 93 00   !.R.C...........
00000150  84 00 75 00  66 00 57 00  48 00 39 00  2a 00 1b 00   ..u.f.W.H.9.*...
00000160  0c 00 61 6e  20 46 72 61  6e 63 69 73  63 6f 65 78   ..an Franciscoex
00000170  69 63 6f 20  43 69 74 79  20 41 6e 67  65 6c 65 73   ico City Angeles
00000180  6d 73 74 65  72 64 61 6d  65 6c 68 69  61 72 69 73   msterdamelhiaris
00000190  64 6f 6e 6f  72 6b 65 77  20                         donorkew "
`;

exports[`build action > build multi 1 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;
